[package]
name = "lazypost"
version = "0.1.0"
edition = "2024"
description = "A terminal UI client for Postman collections, inspired by lazygit."
repository = "https://github.com/Stianhn/lazypost"
license = "MIT"
readme = "README.md"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
chrono = "0.4"
tui-tree-widget = "0.24"
arboard = "3"
rpassword = "7"
